added new features
removed old ul for dice.
Added a new button to restart game and added a counter to show effort

--- a/index.css
+++ b/index.css
@@ -91,6 +91,13 @@ button.roll-dice:hover {
     background-color: #3f2bbd;
      cursor: pointer;
 }
+.exit-button{
+    color: #F5F5F5;
+    background-color: red;
+    border: none;
+    border-radius: 6px;
+    padding: .4em .5em;
+}
 
 
 
